# mcp-server

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  flows.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: commit-lint.yml  lint.yml  pr-label.yml  pr-size.yml  security.yml  stale.yml  test.yml
docs/: minio-implementation.md  s3-provider-production-hardening.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6de6791c6f0077ba_email_py.html  z_6de6791c6f0077ba_metadata_py.html  z_6de6791c6f0077ba_minio_provider_py.html  z_6de6791c6f0077ba_storage_factory_py.html  z_6de6791c6f0077ba_storage_py.html  z_d9a329d7ace50c09___main___py.html  z_d9a329d7ace50c09_server_py.html  z_d9a329d7ace50c09_token_store_py.html
src/: main.py
src/tez_server/: __main__.py  server.py  token_store.py
src/tez_server/services/: email.py  metadata.py  minio_provider.py  storage.py  storage_factory.py
tests/: conftest.py  test_download_flow.py  test_email.py  test_infra.py  test_main.py  test_metadata.py  test_minio_provider.py  test_server.py  test_storage.py  test_token_store.py  test_upload_flow.py
