[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tez-mcp-server"
version = "0.1.0"
description = "Reference MCP server for the Tezit Protocol"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["src"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "if __name__ == .__main__.",
]
