[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tez_server"]

[project]
name = "tez-mcp-server"
version = "0.1.0"
description = "Reference MCP server for the Tezit Protocol"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "boto3>=1.35",
    "sendgrid>=6.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "moto[s3,dynamodb]>=5.0",
    "boto3-stubs[s3,dynamodb]>=1.35",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/tez_server/services/email.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["src/tez_server"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "if __name__ == .__main__.",
]
